--- a/Sass/abstract/_variable.scss
+++ b/Sass/abstract/_variable.scss
@@ -6,4 +6,4 @@ $orange-color:#c35854;
 $grey-color:#393939;
 $grey-color2:#e9e1e1;
 $grey-color3:#f2f2f2;
-$yellow-color: rgb(185, 185, 104);
+$yellow-color: #ecc761;
