--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -8,6 +8,10 @@
 @import './layout/sidebar';
 @import './layout/footer';
 @import './layout/form';
+@import './layout/socialnetwork';
 @import './page/home';
 @import './component/loading';
 @import './component/form';
+@import './component/menubtn';
+@import './component/cardfirm';
+@import './component/slider';
