--- a/View/index.pug
+++ b/View/index.pug
@@ -1,4 +1,4 @@
-extends ./View/layout.pug
+extends ./layout.pug
 block main
     section.swiper.mySwiper.slider-container
         .pre-btn
@@ -12,7 +12,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -26,7 +26,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -40,7 +40,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -54,7 +54,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -68,7 +68,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -82,7 +82,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -96,7 +96,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -110,7 +110,7 @@ block main
                 .card-firm
                     a.card-firm__main(href='')
                         .poster
-                            img(src='./Images/anh1.jpg' alt='')
+                            img(src='../Images/anh1.jpg' alt='')
                         .quality HD
                         .play
                             i.fa-solid.fa-play
@@ -157,7 +157,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
@@ -171,7 +171,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
@@ -185,7 +185,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
@@ -199,7 +199,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
@@ -213,7 +213,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
@@ -227,7 +227,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
@@ -241,7 +241,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
@@ -255,7 +255,7 @@ block main
                         .card-firm
                             a.card-firm__main(href='')
                                 .poster
-                                    img(src='./Images/anh1.jpg' alt='')
+                                    img(src='../Images/anh1.jpg' alt='')
                                 .quality HD
                                 .play
                                     i.fa-solid.fa-play
