--- a/View/index.html
+++ b/View/index.html
@@ -150,7 +150,7 @@
         <div class="swiper-wrapper slider">
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -158,7 +158,7 @@
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -166,7 +166,7 @@
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -174,7 +174,7 @@
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -182,7 +182,7 @@
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -190,7 +190,7 @@
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -198,7 +198,7 @@
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -206,7 +206,7 @@
           </div>
           <div class="swiper-slide card-slider">
             <div class="card-firm"><a class="card-firm__main" href="">
-                <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                 <div class="quality">HD</div>
                 <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
               <div class="card-firm__info"><span class="item star">8</span><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -226,7 +226,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -236,7 +236,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -246,7 +246,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -256,7 +256,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -266,7 +266,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -276,7 +276,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -286,7 +286,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
@@ -296,7 +296,7 @@
             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-6">
               <div class="film-list">
                 <div class="card-firm"><a class="card-firm__main" href="">
-                    <div class="poster"><img src="./Images/anh1.jpg" alt=""></div>
+                    <div class="poster"><img src="../Images/anh1.jpg" alt=""></div>
                     <div class="quality">HD</div>
                     <div class="play"><i class="fa-solid fa-play"></i></div></a><a class="card-firm__name" href="">Name</a>
                   <div class="card-firm__info"><span class="item">2022</span><i class="item fa-solid fa-circle"></i><span class="item">117m</span></div>
